--- a/Actors_List_Trial1/app/src/main/AndroidManifest.xml
+++ b/Actors_List_Trial1/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ly.generalassemb.actors_list_trial1">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
